--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -91,6 +91,7 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "styled-components": "4.2.0"
   },
