--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -86,6 +86,7 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-icons": "^3.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
