--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -88,6 +88,7 @@
     "react-icons": "^3.7.0",
     "react-infinite-scroller": "^1.2.4",
     "react-intl": "2.8.0",
+    "react-mde": "^7.3.2",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
@@ -96,6 +97,7 @@
     "sanitize.css": "8.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
+    "showdown": "^1.9.0",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
