--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -88,6 +88,8 @@
     "react-icons": "^3.7.0",
     "react-infinite-scroller": "^1.2.4",
     "react-intl": "2.8.0",
+    "react-markdown": "^4.0.8",
+    "react-mathjax2": "0.0.2",
     "react-mde": "^7.3.2",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
