--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,7 +1,14 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.9",
+  "version": "1.0.15",
   "description": "django djeddit react client",
+  "files": [
+    "dist",
+    "lib"
+  ],
+  "main": "lib/index.js",
+  "module": "lib/index.es.js",
+  "jsnext:main": "lib/index.es.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/physics-is-beautiful/django-react-djeddit.git"
@@ -18,8 +25,8 @@
     "analyze": "node ./internals/scripts/analyze.js",
     "extract-intl": "node ./internals/scripts/extract-intl.js",
     "npmcheckversion": "node ./internals/scripts/npmcheckversion.js",
-    "preinstall": "npm run npmcheckversion",
     "prebuild": "npm run build:clean",
+    "build_lib": "rollup -c",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "watch": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dev.babel.js --color --progress --hide-modules --display-optimization-bailout --watch",
     "dist": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.dist.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
@@ -113,6 +120,7 @@
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
@@ -129,6 +137,7 @@
     "compare-versions": "3.4.0",
     "compression-webpack-plugin": "2.0.0",
     "coveralls": "3.0.3",
+    "cross-env": "^5.2.0",
     "css-loader": "2.1.1",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
@@ -161,6 +170,7 @@
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
+    "script-loader": "^0.7.2",
     "shelljs": "^0.8.3",
     "style-loader": "0.23.1",
     "stylelint": "10.0.1",
@@ -175,6 +185,14 @@
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
     "webpack-pwa-manifest": "4.0.0",
-    "whatwg-fetch": "3.0.0"
+    "whatwg-fetch": "3.0.0",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-url": "^1.4.0",
+    "@svgr/rollup": "^2.4.1"
   }
 }
