--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -86,6 +86,7 @@
     "immer": "3.0.0",
     "intl": "1.2.5",
     "react-moment": "^0.7.9",
+    "moment": "^2.22.2",
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "js-cookie": "^2.2.0",
