--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -116,15 +116,16 @@
   "devDependencies": {
     "@babel/cli": "7.4.3",
     "@babel/core": "7.4.3",
+    "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "7.4.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
-    "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
+    "@svgr/rollup": "^2.4.1",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -146,7 +147,6 @@
     "eslint-config-prettier": "4.1.0",
     "eslint-import-resolver-webpack": "0.11.1",
     "eslint-plugin-import": "2.17.2",
-    "react-bootstrap": "^1.0.0-beta.9",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-react": "7.12.4",
@@ -169,9 +169,18 @@
     "pre-commit": "1.2.2",
     "prettier": "1.17.0",
     "react-app-polyfill": "0.2.2",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
     "rimraf": "2.6.3",
+    "rollup": "^0.64.1",
+    "rollup-plugin-babel": "^4.0.1",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-url": "^1.4.0",
     "script-loader": "^0.7.2",
     "shelljs": "^0.8.3",
     "style-loader": "0.23.1",
@@ -187,14 +196,6 @@
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
     "webpack-pwa-manifest": "4.0.0",
-    "whatwg-fetch": "3.0.0",
-    "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^4.0.1",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0",
-    "@svgr/rollup": "^2.4.1"
+    "whatwg-fetch": "3.0.0"
   }
 }
