--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.19",
+  "version": "1.0.21",
   "description": "django djeddit react client",
   "files": [
     "dist",
@@ -78,6 +78,7 @@
     "@babel/polyfill": "7.4.3",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
+    "core-js": "^2.6.9",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
@@ -86,24 +87,24 @@
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
     "intl": "1.2.5",
-    "react-moment": "^0.7.9",
-    "moment": "^2.22.2",
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "js-cookie": "^2.2.0",
     "lodash": "4.17.11",
     "minimist": "1.2.0",
+    "moment": "^2.22.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-icons": "^3.7.0",
     "react-infinite-scroller": "^1.2.4",
     "react-intl": "2.8.0",
     "react-markdown": "^4.0.8",
-    "react-bootstrap": "^1.0.0-beta.9",
     "react-mathjax2": "0.0.2",
     "react-mde": "^7.3.2",
+    "react-moment": "^0.7.9",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
@@ -119,13 +120,16 @@
     "@babel/core": "7.4.3",
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-modules-commonjs": "7.4.3",
     "@babel/plugin-transform-react-constant-elements": "7.2.0",
     "@babel/plugin-transform-react-inline-elements": "7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
+    "@babel/runtime-corejs2": "^7.4.5",
     "@svgr/rollup": "^2.4.1",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
@@ -177,7 +181,7 @@
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
