--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.45",
+  "version": "1.0.49",
   "description": "django djeddit react client",
   "files": [
     "dist",
@@ -78,8 +78,8 @@
     "@babel/polyfill": "7.4.3",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
-    "core-js": "^2.6.9",
     "connected-react-router": "6.4.0",
+    "core-js": "^2.6.9",
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
@@ -113,6 +113,7 @@
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "showdown": "^1.9.0",
+    "showdown-katex": "^0.6.0",
     "styled-components": "4.2.0"
   },
   "devDependencies": {
