--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.49",
+  "version": "1.0.52",
   "description": "django djeddit react client",
   "files": [
     "dist",
@@ -30,7 +30,7 @@
     "build_lib": "rollup -c",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "watch": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dev.babel.js --color --progress --hide-modules --display-optimization-bailout --watch",
-    "dist": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.dist.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "dist": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dist.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
     "dist:clean": "rimraf ./dist/*",
     "start": "cross-env NODE_ENV=development node server",
@@ -113,6 +113,7 @@
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "showdown": "^1.9.0",
+    "offline-plugin": "5.0.6",
     "showdown-katex": "^0.6.0",
     "styled-components": "4.2.0"
   },
@@ -170,7 +171,6 @@
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
-    "offline-plugin": "5.0.6",
     "plop": "2.3.0",
     "pre-commit": "1.2.2",
     "prettier": "1.17.0",
@@ -200,6 +200,7 @@
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
+    "webpack-node-externals": "^1.7.2",
     "webpack-pwa-manifest": "4.0.0",
     "whatwg-fetch": "3.0.0"
   }
