--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.52",
+  "version": "1.0.72",
   "description": "django djeddit react client",
   "files": [
     "dist",
-    "lib"
+    "lib",
+    "app"
   ],
   "main": "lib/index.js",
   "module": "lib/index.es.js",
@@ -30,7 +31,8 @@
     "build_lib": "rollup -c",
     "build": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "watch": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dev.babel.js --color --progress --hide-modules --display-optimization-bailout --watch",
-    "dist": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.dist.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "dist": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.dist.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
+    "front_dist": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:clean": "rimraf ./build",
     "dist:clean": "rimraf ./dist/*",
     "start": "cross-env NODE_ENV=development node server",
@@ -93,6 +95,7 @@
     "lodash": "4.17.13",
     "minimist": "1.2.0",
     "moment": "^2.22.2",
+    "offline-plugin": "5.0.6",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -105,15 +108,14 @@
     "react-mathjax2": "0.0.2",
     "react-mde": "^7.3.2",
     "react-moment": "^0.7.9",
-    "react-redux": "7.0.2",
-    "react-router-dom": "5.0.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.0",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "remark-math": "^1.0.6",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
     "showdown": "^1.9.0",
-    "offline-plugin": "5.0.6",
     "showdown-katex": "^0.6.0",
     "styled-components": "4.2.0"
   },
@@ -161,9 +163,11 @@
     "eslint-plugin-redux-saga": "1.0.0",
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
+    "html-webpack-chunk-prefix-plugin": "0.0.2",
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "4.6.0",
     "imports-loader": "0.8.0",
+    "interpolate-html-plugin": "^3.0.0",
     "jest-cli": "24.7.1",
     "jest-dom": "3.1.3",
     "jest-styled-components": "6.3.1",
