--- a/frontend/django-react-djeddit-client/package.json
+++ b/frontend/django-react-djeddit-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vermus/django-react-djeddit-client",
-  "version": "1.0.74",
+  "version": "1.0.78",
   "description": "django djeddit react client",
   "files": [
     "dist",
@@ -97,9 +97,9 @@
     "moment": "^2.22.2",
     "offline-plugin": "5.0.6",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "16.8.6",
+    "react-dom": "^16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-icons": "^3.7.0",
     "react-infinite-scroller": "^1.2.4",
